# ssh-tools

./: .gitignore  README.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  types.rs
src-tauri/src/commands/: app.rs  known_hosts.rs  launcher.rs  mod.rs  ssh_config.rs  ssh_keys.rs
src-tauri/src/utils/: mod.rs  permissions.rs  ssh_dir.rs  terminal.rs
src/components/common/: ConfirmDialog.tsx  EmptyState.tsx  Toast.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  SidebarNavItem.tsx
src/features/known-hosts/: KnownHostsPage.tsx  KnownHostsTable.tsx
src/features/launcher/: LauncherPage.tsx
src/features/ssh-config/: HostCard.tsx  HostEditor.tsx  HostList.tsx  SshConfigPage.tsx
src/features/ssh-keys/: CopyToServerDialog.tsx  KeyCard.tsx  KeyGeneratorDialog.tsx  KeyList.tsx  SshKeysPage.tsx
src/lib/: ssh-host-utils.test.ts  ssh-host-utils.ts  tauri.test.ts  tauri.ts  time.test.ts  time.ts
src/stores/: index.ts
src/styles/: globals.css
