[package]
name = "ssh-gui"
version = "0.1.0"
description = "SSH GUI - Manage SSH configs, keys, and connections"
authors = ["Lizardog"]
edition = "2021"

[lib]
name = "ssh_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
dirs = "5"
notify = "6"
notify-debouncer-mini = "0.4"
